--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -271,7 +271,7 @@
 
 ##### 4.1.1.2 Activity 创建
 
-　　应用程序进程创建 Actiivty 后，Activity 将执行以下操作：
+　　应用程序进程创建 Activity 后，Activity 将执行以下操作：
 
 1. 初始化值
 2. 调用构造函数
@@ -300,9 +300,9 @@
 
    使用 Activity 的 windowBackground 主题属性来为启动的 Activity 提供一个简单的 drawable。
 
-2. 避免在启动时坐密集沉重的初始化
+2. 避免在启动时做密集沉重的初始化
 
-   对于一些必须去初始化的，可以使用异步加载。一些初始化的情况：a.比如像友盟，bugly 这样的业务非必要的可以异步加载；b.比如地图、推送等，非第一时间需要的可以在主线程做延时启动。当程序以及启动起来之后，再进行初始化。c.对于图片、网络请求框架必须再主线程初始化。 
+   对于一些必须去初始化的，可以使用异步加载。一些初始化的情况：a.比如像友盟，bugly 这样的业务非必要的可以异步加载；b.比如地图、推送等，非第一时间需要的可以在主线程做延时启动。当程序以及启动起来之后，再进行初始化。c.对于图片、网络请求框架必须在主线程初始化。 
 
 3. 避免 I/O 操作、反序列化、网络操作、布局嵌套等
 
@@ -381,7 +381,7 @@
 
    统一图像的着色不同，可以使用 android:tint（将图片渲染成指定的颜色） 和 tintMode 属性，低版本（5.0 以下）可以使用 ColorFilter（图片减半处理，可以修改图片每个像素的颜色）。
 
-4. 压缩 PNG 和 JPEG 文件。可以减少 PNG 文件的大小，而不会丢失图像质量。使用工具如 pngcrush、pngquant 或 zopfliping，这些工具都可以减少 PNG 文件的大小，同事保持感知的图像质量。
+4. 压缩 PNG 和 JPEG 文件。可以减少 PNG 文件的大小，而不会丢失图像质量。使用工具如 pngcrush、pngquant 或 zopfliping，这些工具都可以减少 PNG 文件的大小，同时保持感知的图像质量。
 
 5. 使用 WebP 文件格式。可以使用 Webp 文件格式，而不是使用 PNG 或 JPEG 文件。Webp 格式提供有损压缩（如 JPEG）以及透明度（如 PNG），但可以提供比 JPEG 、PNG 更好的压缩。
 
@@ -440,7 +440,7 @@ android {
 1. 可以退出非面向用户的任务（如定期数据库数据更新）；
 2. 当充电时才希望执行的工作（如备份数据）；
 3. 需要访问网络或 Wi-Fi 连接的任务（如向服务器拉取配置数据）；
-4. 零散任务合并到一个批次取定期运行；
+4. 零散任务合并到一个批次去定期运行；
 5. 当设备空闲时启动某些任务；
 6. 只有当条件得到满足，系统才会启动计划中的任务（充电、WIFI）。
 7. 需要进行网络请求时，首先判断网络当前的状态。
