--- a/BookNote/设计模式之禅/第3章-依赖倒置原则.md
+++ b/BookNote/设计模式之禅/第3章-依赖倒置原则.md
@@ -13,7 +13,7 @@
 
 　　每一个逻辑的实现都是由原子逻辑组成的，不可分割的原子逻辑就是低层模块，原子逻辑的再组装就是高层模块。
 
-　　再 Java 语言中，抽象就是指接口或抽象类，两者都是不能直接被实例化的；细节就是实现类，实现接口或继承抽象类而产生的类就是细节，其特点就是可以直接被实例化，也就是可以加上一个关键字 new 产生一个对象。
+　　在 Java 语言中，抽象就是指接口或抽象类，两者都是不能直接被实例化的；细节就是实现类，实现接口或继承抽象类而产生的类就是细节，其特点就是可以直接被实例化，也就是可以加上一个关键字 new 产生一个对象。
 
 　　依赖倒置原则在 Java 语言中的表现就是：
 
