--- a/DataStructure/算法/分支定界法.md
+++ b/DataStructure/算法/分支定界法.md
@@ -4,7 +4,7 @@
 
 　　类似于回溯法，也是一种在问题的解空间树 T 上搜索问题解的算法，但在一般情况下，分支限界法与回溯法的求解目标不同。回溯法的求解目标是找出 T 中满足约束条件的所有解，而分支限界法的求解目标则是找出满足约束条件的一个解，或是在满足约束条件的解中找出使某一目标函数值达到极大或极小的解，即在某种意义下的最优解。
 
-### 2. 分支搜索算法
+## 2. 分支搜索算法
 
 　　所谓 “ 分支 ” 就是采用广度优先的策略，依次搜索 E- 节点的所有分支，也就是所有相邻节点，抛弃不满足约束条件的节点，其余节点加入活结点表。然后从表中选择一个节点作为下一个 E- 节点，继续搜索。
 
