--- a/DataStructure/算法/动态规划.md
+++ b/DataStructure/算法/动态规划.md
@@ -1,6 +1,6 @@
 # 动态规划（Dynamic Programming）
 
-动态规划（dynamic programming,DP）：将一个问题拆成几个字问题，分别求解这些子问题，即可推断出大问题的解。
+动态规划（dynamic programming,DP）：将一个问题拆成几个子问题，分别求解这些子问题，即可推断出大问题的解。
 
 ## 几个简单的概念
 
