--- a/DataStructure/算法/排序算法/快速排序.md
+++ b/DataStructure/算法/排序算法/快速排序.md
@@ -10,7 +10,7 @@
 
 　　快速排序的名字起的是简单粗暴，因为一听到这个名字就知道它存在的意义，就是快，而且效率高！
 
-　　它是处理大数据最快的排序算法之一了。虽然在最快的情况下的时间复杂度达到了 O(n^2)，但是就是优秀，在大多数情况下都比平均时间复杂度为 O（nlogn）的排序算法表现要更好。
+　　它是处理大数据最快的排序算法之一了。虽然在最坏的情况下的时间复杂度达到了 O(n^2)，但是就是优秀，在大多数情况下都比平均时间复杂度为 O（nlogn）的排序算法表现要更好。
 
 　　快速排序的主要思想是：在待排序的序列中选择一个称为主元的元素，将数组分为两部分，使得第一部分中的所有元素都小于或等于主元，而第二部分中的所有元素都大于主元，然后对两部分递归地应用快速排序算法，整个排序过程可以递归进行，以此达到整个数据变成有序序列。
 
