--- a/DataStructure/算法/查找算法/二分查找.md
+++ b/DataStructure/算法/查找算法/二分查找.md
@@ -4,7 +4,7 @@
 
 　　二分查找（binary search），也称折半查找，是一种在有序数组中查找某一特定元素的搜索算法，属于有序查找算法。搜索过程从数组的中间元素开始，如果中间元素正好是要查找的元素，则搜索过程结束；如果某一特定元素大于或者小于中间元素，则在数组大小或小于中间元素的那一半中查找，而且跟开始一样从中间元素开始比较。如果在某一步骤数组为空，则代表找不到，这种搜索算法每一次比较都使搜索范围缩小一半。
 
-　　元素必须是有序的，如果是无需的则要先进行排序操作。
+　　元素必须是有序的，如果是无序的则要先进行排序操作。
 
 　　注：折半查找的前提条件是需要有序表顺序存储，对于静态查找表，一次排序后不再变化，折半查找能得到不错的效率。但对于需要频繁执行插入或删除操作的数据集来说，维护有序的排序会带来不小的工作量，那就不建议使用。
 
