2022年4月计划完成

--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -61,7 +61,8 @@
 * 202201 - 《高效能人士的七个习惯》第三章
 * 202201 - 《生活蒙太奇》
 * 202202 - 《和修拉一起过周末》
-* 202202 - 《高效能人士的七个习惯》第四-五章。
+* 202202 - 《高效能人士的七个习惯》第四-五章。																										
+* 202204 - 《高效能人士的七个习惯》第六-八章
 
 ### 1.5. 教师证
 
@@ -103,6 +104,8 @@
 * 202201- 5 次
 * 202202 - 8 次
 * 202203 - 8 次
+* 202204 - 6 次
+* 
 
 ### 2.2. 绘画
 
@@ -116,6 +119,7 @@
 * 202201 - 0 张，写了 1 张字帖
 * 202202 - 0 张
 * 202203 - 0 张，写了 2 张字帖
+* 202204 - 0 张
 
 
 
