--- a/unity/Unity/ARFoundation/2.ARFoundation之路-环境配置(Android).md
+++ b/unity/Unity/ARFoundation/2.ARFoundation之路-环境配置(Android).md
@@ -10,7 +10,7 @@
 
 先选择为 Packages: Ubity Registry，就可以看到 AR Foundation 和 ARCore XR Plugin 插件了。
 
-![](/Users/ruming/Library/Application%20Support/marktext/images/2022-02-08-14-51-04-image.png)
+![](img/2022-02-08-14-51-04-image.png)
 
 点击这两个插件的 install 按钮进行安装插件。至此，已经将开发 Android 的 AR 所需插件都导入了。
 
@@ -20,7 +20,7 @@
 
 在 Unity 窗口中，按 Ctrl+Shift+B 快捷键，或者在菜单栏中选择 File->Build Settings…，打开设置窗口。选择 “Platform” 下的 “Android” 选项，然后单击 “Switch Platform” 按钮切换到 Android 平台。当 Unity 标志出现在 Android 选项旁边时，发布平台就切换成 Android 了，如下图所示。
 
-![](/Users/ruming/Library/Application%20Support/marktext/images/2022-02-08-15-13-40-image.png)
+![](img/2022-02-08-15-13-40-image.png)
 
 单击"Player Settings" 按钮，选择 Player，打开 Other Settings 选项卡，1.取消勾选 Multithreaded Rendering（多线程渲染）；2.删除 Vulkan，因为 Android 不支持 Vulkan；3.在”Minimum API Level” 选项选择“Android 7.0 'nougat'(API level 24)” 或以上，保证与 ARCore 兼容的 Android 最低版本。
 
