2022年5月计划完成情况更新

--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -8,12 +8,12 @@
 * 视频
   * 码牛-移动互联网高级开发正式课视频-音视频
 * 书籍
-  * 《Android 进阶解密》
+  * 《Android 进阶之光》
 ```
 
 #### 实施
 
-
+* 202205-《Android 进阶之光》第二章
 
 ### 1.2. Kotlin
 
@@ -52,7 +52,7 @@
 
 ```
 * 书籍
-  * 《高效能人士的七个习惯》
+  * 《高效能人士的七个习惯》- 完成
 
 ```
 
@@ -61,8 +61,12 @@
 * 202201 - 《高效能人士的七个习惯》第三章
 * 202201 - 《生活蒙太奇》
 * 202202 - 《和修拉一起过周末》
-* 202202 - 《高效能人士的七个习惯》第四-五章。																										
+* 202202 - 《高效能人士的七个习惯》第四-五章。
+* 202203 - 《和莫奈一起去郊游》																										
 * 202204 - 《高效能人士的七个习惯》第六-八章
+* 202205 - 《高效能人士的七个习惯》完成
+* 202205 - 《和北斋一起来冲浪》
+* 202205 - 《和梵高一起喝咖啡》
 
 ### 1.5. 教师证
 
@@ -105,7 +109,7 @@
 * 202202 - 8 次
 * 202203 - 8 次
 * 202204 - 6 次
-* 
+* 202205 - 10 次
 
 ### 2.2. 绘画
 
@@ -120,6 +124,7 @@
 * 202202 - 0 张
 * 202203 - 0 张，写了 2 张字帖
 * 202204 - 0 张
+* 202205 - 3 张，进度 12.5%
 
 
 
