--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -92,7 +92,13 @@
 
 * 202202-《Flutter实战·第二版》第一章，第二章 2.1-2.2
 
+### 1.7. 知识
 
+1. 202205 - 夜曲编程 - Python 公开课
+
+   内容很基础，没有记录，可以重新找课程看。
+
+2. 20220607-GridView嵌套在ScrollView里展示不全
 
 ## 2. 生活
 
