202206计划完成情况

--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -53,6 +53,7 @@
 ```
 * 书籍
   * 《高效能人士的七个习惯》- 完成
+  * 《labuladong的算法秘籍》
 
 ```
 
@@ -67,6 +68,7 @@
 * 202205 - 《高效能人士的七个习惯》完成
 * 202205 - 《和北斋一起来冲浪》
 * 202205 - 《和梵高一起喝咖啡》
+* 202206 - 《labuladong的算法秘籍》37/604，6%
 
 ### 1.5. 教师证
 
@@ -98,7 +100,11 @@
 
    内容很基础，没有记录，可以重新找课程看。
 
-2. 20220607-GridView嵌套在ScrollView里展示不全
+2. 202206 - GridView 嵌套在 ScrollView 里展示不全
+
+3. 202206 - EventBus 的使用、EventBus 的原理
+
+4. 202206 - Room 数据库操作、Room 原理解析
 
 ## 2. 生活
 
@@ -116,6 +122,7 @@
 * 202203 - 8 次
 * 202204 - 6 次
 * 202205 - 10 次
+* 202206 - 9 次
 
 ### 2.2. 绘画
 
@@ -131,6 +138,7 @@
 * 202203 - 0 张，写了 2 张字帖
 * 202204 - 0 张
 * 202205 - 3 张，进度 12.5%
+* 202206 - 4 张，进度 29%
 
 
 
