202207计划完成情况更新

--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -69,6 +69,8 @@
 * 202205 - 《和北斋一起来冲浪》
 * 202205 - 《和梵高一起喝咖啡》
 * 202206 - 《labuladong的算法秘籍》37/604，6%
+* 202207 - 《labuladong的算法秘籍》115/604，19%
+* 202208 - 《labuladong的算法秘籍》145/604
 
 ### 1.5. 教师证
 
@@ -106,6 +108,20 @@
 
 4. 202206 - Room 数据库操作、Room 原理解析
 
+5. 202207 - 安装知识整理 90%
+
+6. 202208 - 知识整理
+
+   * 安装知识整理 100%
+   * MVI
+   * LiveDataBus
+   * LiveDataBus
+   * MutableLiveData 详解
+   * MVVM 设计模式与 ViewModel、LiveData
+   * 内存知识
+   * ListView 原理解析
+   * Android中ListView的几种常见优化方式
+
 ## 2. 生活
 
 ### 2.1. 锻炼
@@ -123,6 +139,8 @@
 * 202204 - 6 次
 * 202205 - 10 次
 * 202206 - 9 次
+* 202207 - 7 次
+* 202208 - 
 
 ### 2.2. 绘画
 
@@ -139,6 +157,8 @@
 * 202204 - 0 张
 * 202205 - 3 张，进度 12.5%
 * 202206 - 4 张，进度 29%
+* 202207 - 2 张，进度 37%
+* 202208 - 
 
 
 
