--- a/plan/计划/任务库.md
+++ b/plan/计划/任务库.md
@@ -20,6 +20,7 @@
   * 《思维导图完整手册》 - 完成
   * 《女性呵护指南》豆瓣评分 8.2
 * 技术栈
+  * Framework
   * React Native
     * 书籍：《React Native 移动开发实战》 - 完成
   * Flutter
@@ -34,9 +35,9 @@
   * 音视频
   * python
   * 微信小程序
-* Unity
-  * 教程
-    * https://zhuanlan.zhihu.com/p/151238164 [教程汇总+持续更新]Unity从入门到入坟——收藏这一篇就够了
+* 知识探索
+  * findviewbyid 的实现
+  * 
 
 # 2. 生活
 
