--- a/plan/面试/面试宝典.md
+++ b/plan/面试/面试宝典.md
@@ -4,6 +4,8 @@
 
 * Android
   * Activity
+* Java
+* 
 
 
 
@@ -1726,9 +1728,9 @@ android {
 
 3. 　　rInflate() 方法其实就是遍历 xml 中的所有元素，然后挨个进行解析。
 
-   　　例如解析到一个标签，那么就根据用户设置的一些 layout_width、layout_height、id 等属性来构造一个 TextView 对象，然后添加到父控件（ViewGroup 类型）中。
+      　　例如解析到一个标签，那么就根据用户设置的一些 layout_width、layout_height、id 等属性来构造一个 TextView 对象，然后添加到父控件（ViewGroup 类型）中。
 
-   　　include 标签也是一样的，当遇到 include 标签时，就调用了 parseInclude() 方法，就会对 include 标签进行解析。
+      　　include 标签也是一样的，当遇到 include 标签时，就调用了 parseInclude() 方法，就会对 include 标签进行解析。
 
 4. 　　整个过程就是根据不同的标签解析不同的元素，首先会解析 include 元素，然后再解析被 include 进来的布局的 root view 元素。然后再解析 root view 下面的所有元素，这个过程是从上面注释的 2-4 的过程，然后是设置布局参数。
 
