java面试知识整理

--- a/Java/线程/锁的知识.md
+++ b/Java/线程/锁的知识.md
@@ -293,7 +293,7 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　若当前只有一个等待线程，则该线程通过自旋进行等待。但是当自旋超过一定的次数，或者一个线程在持有锁，一个在自旋，又有第三个来访问时，轻量级锁升级为重量级锁。
 
-### 4.6. 重量解锁
+### 4.6. 重量级锁
 
 　　重量级锁是指当锁升级为重量级锁时，锁标志的状态值变为 "10"，此时 Mark Word 中存储的是指向重量级锁的指针，此时等待锁的线程都会进入阻塞状态。
 
@@ -323,7 +323,7 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 ![](image/公平锁.png)
 
-　　假设有一口水井，有管理员看守，管理员有一把琐，只有拿到锁的人才能够打水，打完水要把锁还给管理员。每个过来打水的人都要管理的允许并拿到锁之后才能去打水，如果前面有人正在打水，那么这个想要打水的人就必须排队。管理员会查看下一个要去打水的人是不是队伍里排最前面的人，如果是的话，才会给你锁让你去打水；如果你不是排第一的人，就必须去队尾排队，这就是公平锁。
+　　假设有一口水井，有管理员看守，管理员有一把琐，只有拿到锁的人才能够打水，打完水要把锁还给管理员。每个过来打水的人都要管理员的允许并拿到锁之后才能去打水，如果前面有人正在打水，那么这个想要打水的人就必须排队。管理员会查看下一个要去打水的人是不是队伍里排最前面的人，如果是的话，才会给你锁让你去打水；如果你不是排第一的人，就必须去队尾排队，这就是公平锁。
 
 　　但是对于非公平锁，管理员对打水的人没有要求。即使等待队列里有排队等待的人，但如果在上一个人刚打完水把锁还给管理员而且管理员还没有允许等待队伍里下一个人去打水时，正好来了一个插队的人，这个插队的人是可以直接从管理员那里拿到锁去打水，不需要排队，原本排队等待的人只能继续等待。如下图所示：
 
@@ -758,7 +758,7 @@ protected final boolean tryAcquire(int acquires) {
 
 　　tryAcquire() 除了重入条件（当前线程为获取了写锁的线程）之外，增加了一个读锁是否存在的判断。如果存在读锁，则写锁不能被获取，原因在于：必须确保写锁的操作对读锁可见，如果允许在读锁已被获取的情况下对写锁的获取，那么正在运行的其他读锁线程就无法感知到当前写线程的操作。
 
-　　因此，只有等待其他读线程都释放了读锁，写锁才能被当前线程获取，而写锁一旦被获取，则其他读写线程的后续访问均被阻塞。写锁的释放与 ReentrantLock 的释放过程基本类似，每次释放均减少写状态，当写状态为 0 时标识写锁已被释放，然后等待的读写线程才能够继续访问读写锁，同时前次写线程的修改对后续的读写线程可见。
+　　因此，只有等待其他读线程都释放了读锁，写锁才能被当前线程获取，而写锁一旦被获取，则其他读写线程的后续访问均被阻塞。写锁的释放与 ReentrantLock 的释放过程基本类似，每次释放均减少写状态，当写状态为 0 时标识写锁已被释放，然后等待的读写线程才能够继续访问读写锁，同时前一次写线程的修改对后续的读写线程可见。
 
 　　接着是读锁的代码：
 
