--- a/plan/面试/面试宝典/面试宝典-操作系统.md
+++ b/plan/面试/面试宝典/面试宝典-操作系统.md
@@ -1,86 +1,84 @@
-# 面试宝典 - 其他
+# 面试宝典 - 操作系统
 
-## 操作系统
+## 1.操作系统概述
 
-### 操作系统概述
-
-#### 操作系统分类
+### 1.1.操作系统分类
 
 　　操作系统分为：批处理操作系统（单道、多道）、分时操作系统（Unix）、实时操作系统（MsgOS）、网络操作系统、分布式操作系统、微机操作系统（Linux、Windows、IOS 等）、嵌入式操作系统（Android、IOS）。
 
-#### 操作系统的 4 个特性
+### 1.2.操作系统的 4 个特性
 
-1. 并发性
+#### 1.2.1.并发性
 
-   区别于并行性，并发是指宏观上在一段时间内能同时运行多个程序，而并行则指同一时刻能运行多个指令。
+区别于并行性，并发是指宏观上在一段时间内能同时运行多个程序，而并行则指同一时刻能运行多个指令。
 
-    　　并行需要硬件支持，如多流水线、多核处理器或者分布式计算系统。
+ 　　并行需要硬件支持，如多流水线、多核处理器或者分布式计算系统。
 
-    　　操作系统通过引入进程和线程，使得程序能够并发运行。
+ 　　操作系统通过引入进程和线程，使得程序能够并发运行。
 
-2. 共享性
+#### 1.2.2.共享性
 
-   一般的共享是指某种资源可以被大家使用，在 OS 下的资源共享称为资源复用，具体含义是：系统中的资源可供内存中多个并发的执行的进程共同使用。
+一般的共享是指某种资源可以被大家使用，在 OS 下的资源共享称为资源复用，具体含义是：系统中的资源可供内存中多个并发的执行的进程共同使用。
 
-    　　系统中的资源可以被内存中多个并发执行的进线程共同使用。
+ 　　系统中的资源可以被内存中多个并发执行的进线程共同使用。
 
-    　　共享是指系统中的资源可以被多个并发进程共同使用。
+ 　　共享是指系统中的资源可以被多个并发进程共同使用。
 
-    　　有两种共享方式：互斥共享和同时共享。
+ 　　有两种共享方式：互斥共享和同时共享。
 
-    　　互斥共享的资源称为临界资源，例如打印机等，在同一时刻只允许一个进程访问，需要用同步机制来实现互斥访问。
+ 　　互斥共享的资源称为临界资源，例如打印机等，在同一时刻只允许一个进程访问，需要用同步机制来实现互斥访问。
 
-3. 虚拟性
+#### 1.2.3.虚拟性
 
-   通过某种技术将一个物理实体变为若干个逻辑上的对应物的功能即为虚拟，也就是虚拟技术把一个物理实体转换为多个逻辑实体。
+通过某种技术将一个物理实体变为若干个逻辑上的对应物的功能即为虚拟，也就是虚拟技术把一个物理实体转换为多个逻辑实体。
 
-    　　主要有两种虚拟技术：时（时间）分复用技术（如分时系统）和空（空间）分复用技术（如虚拟内存）。
+ 　　主要有两种虚拟技术：时（时间）分复用技术（如分时系统）和空（空间）分复用技术（如虚拟内存）。
 
-    　　多个进程能在同一个处理器上并发执行使用了时分复用技术，让每个进程轮流占用处理器，每次只执行一小个时间片并快速切换。
+ 　　多个进程能在同一个处理器上并发执行使用了时分复用技术，让每个进程轮流占用处理器，每次只执行一小个时间片并快速切换。
 
-    　　虚拟内存使用了空分复用技术，它将物理内存抽象为地址空间，每个进程都有各自的地址空间。地址空间的页被映射到物理内存，地址空间的页并不需要全部在物理内存中，当使用到一个没有在物理内存的页时，执行页面置换算法，将该页置换到内存中。
+ 　　虚拟内存使用了空分复用技术，它将物理内存抽象为地址空间，每个进程都有各自的地址空间。地址空间的页被映射到物理内存，地址空间的页并不需要全部在物理内存中，当使用到一个没有在物理内存的页时，执行页面置换算法，将该页置换到内存中。
 
-4. 异步
+#### 1.2.4.异步
 
-   异步指进程不是一次性执行完毕，而是走走停停，每道程序完成的时间都是不可预知的，进程是以不可知的速度向前推进。
+异步指进程不是一次性执行完毕，而是走走停停，每道程序完成的时间都是不可预知的，进程是以不可知的速度向前推进。
 
-#### 操作系统的基本功能
+### 1.3.操作系统的基本功能
 
 　　操作系统的功能有：进程管理、文件管理、存储管理、设备管理、作业管理。
 
-##### 进程管理
+#### 1.3.1.进程管理
 
 　　也称处理机管理，实质上是对处理机执行时间进行管理，采用多道程序等技术将 CPU 的时间真正合理地分配给每个任务。
 
 　　主要包括进程管理、进程同步、进程通信和进程调度。
 
-##### 文件管理
+#### 1.3.2.文件管理
 
 　　又称信息管理，主要包括文件存储空间管理、目录管理、文件读写管理和存取管理。
 
-##### 内存管理
+#### 1.3.3.内存管理
 
 　　也称为存储管理，是对主存储器空间的管理。
 
 　　主要包括存储分配与回收、存储保护与共享、地址映射（变换）和主存扩充。
 
-##### 设备管理
+#### 1.3.4.设备管理
 
 　　实质上是对硬件设备进行管理，完成用户的 I/O 请求，方便用户使用各种设备，并提高设备的利用率。
 
 　　其中包括缓冲管理、输入输出设备的分配、启动、完成和回收、设备处理、虚拟设备。
 
-##### 作业管理
+#### 1.3.5.作业管理
 
 　　包括人物、人机交互和用户界面管理等。
 
-### 进程与线程
+## 2.进程与线程
 
-#### 进程
+### 2.1.进程
 
 　　进程是具有一定独立功能的程序关于某个数据集合上地一次运行活动，是系统进行资源分配和调度的一个独立基本单位。
 
-##### 进程的特征
+#### 2.1.1.进程的特征
 
 1. 结构特征：程序段、相关数据段和 PCB 三部分构成进程实体。
 2. 动态性：进程实体的一次执行过程，具有生命期，而程序是有序指令集合，是静态的。
@@ -88,7 +86,7 @@
 4. 独立性：进程实体是一个能独立运行、独立分配资源和独立接收调度的基本单位。
 5. 异步性：进程按各自独立的、不可预知的速度向前推进。
 
-##### 多进程的组织形式包括下面 3 个关键部分
+#### 2.1.2.多进程的组织形式包括下面 3 个关键部分
 
 1. PCB（Process Control Block）：进程控制块，用来记录进程信息的数据结构（管理进程的核心，包含了 PID 等进程的所有关键信息）。
 
@@ -104,7 +102,7 @@
 
 3. 队列：就绪队列，等待（阻塞）队列。
 
-##### 进程的状态
+#### 2.1.3.进程的状态
 
 　　三态模型（左图）、五态模型（右图）
 
@@ -125,7 +123,7 @@
 * 只有就绪态和运行态可以互相转换，其它的都是单向转换。就绪状态的进程通过调度算法从而获得 CPU 时间，转为运行状态；而运行状态的进程，在分配给它的 CPU 时间片用完之后就会转为就绪状态，等待下一次调度。
 * 阻塞状态是缺少需要的资源从而由运行状态转换而来，但是该资源不包括 CPU 时间，减少 CPU 时间会从运行态转换为就绪态。
 
-#### 线程
+### 2.2.线程
 
 　　线程是进程的一个实体，是 CPU 独立调度和分派的基本单位，它是比进程更小的能独立运行的基本单位。线程自己基本上不拥有系统资源，只拥有一点在运行中必不可少的资源（如程序计数器、一组寄存器和栈），但是它可与同属一个进程的其他的线程共享进程所拥有的全部资源，也有就绪、运行、阻塞三态。
 
@@ -135,16 +133,16 @@
 
 　　线程有自己的 TCB （thread control block 线程控制块），只负责这条流程的信息，包括 PC 程序计数器，SP 栈、State 状态、寄存器、线程 id。
 
-##### 线程分类
+#### 2.2.1.线程分类
 
 　　线程有内核级线程和用户级线程，一般说的都是用户级线程，内核级线程由内核管理。
 
 1. 只有内核级线程才能发挥多核性能，因为内核级线程共用一套 MMU（即内存映射表），统一分配核 1 核 2 （即有多个 CPU，可以一个 CPU 执行一个内核级线程），进程无法发挥多核性能，因为进程切换都得切 MMU。
 2. 为什么需要内核级线程？如果只有用户级线程，在内核中只能看到进程，所以当用户级线程中一个线程进行 IO 读写阻塞时，内核会将该线程所在的进程直接切换。例如当用浏览器打开网页，这个进程中有下载数据线程，有显示数据线程，当数据下载读写阻塞时，内核直接切到 qq（这些切换是指在 CPU 上运行的程序）。
 
-#### 进程与线程
+### 2.3.进程与线程
 
-##### 区别
+#### 2.3.1.区别
 
 1. 拥有资源
 
@@ -188,29 +186,29 @@
 
 　　从逻辑角度来看，多线程的意义在于一个应用程序中，有多个执行部分可以同时执行。但操作系统并没有将多个线程看做多个独立的应用，用来实现进程的调度和管理以及资源分配。这就是进程和线程的重要区别。
 
-##### 优缺点
+### 2.3.2.优缺点
 
 　　线程执行开销小，但不利于资源的管理和保护；而进程正相反。同时，线程适合于在 SMP 机器上运行，而进程则可以跨机器迁移。
 
-#### 进程同步
+### 2.4.进程同步
 
 　　经典的进程同步问题：生产者-消费者问题；哲学家进餐问题；读者-写者问题。
 
 　　同步的解决方案：管程、信号量。
 
-##### 临界区
+#### 2.4.1.临界区
 
 　　对临界资源进行访问的那段代码称为临界区。
 
 　　为了互斥访问临界资源，每个进程在进入临界区之前，需要先进行检查。
 
-##### 同步与互斥
+#### 2.4.2.同步与互斥
 
 　　同步：多个进程因为合作产生的直接制约关系，使得进程有一定的先后执行关系。
 
 　　互斥：多个进程在同一时刻只有一个进程能进入临界区。
 
-##### 信号量 Semaphore
+#### 2.4.3.信号量 Semaphore
 
 　　信号量机制：即利用 PV 操作来对信号量进行处理。
 
@@ -227,13 +225,13 @@
 * P：如果信号量大于 0，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
 * V：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
 
-　　P和 V 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
+　　P 和 V 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
 
 　　一般来说，信号量 S >= 0 时，S 表示可用资源的数量。执行一次 P 操作意味着请求分配一个单位资源，因此 S 的值减 1；当 S < 0 时，表示已经没有可用资源，请求者必须等待别的进程释放该类资源，它才能运行下去。而执行一个 V 操作意味着释放一个单位资源，因此 S 的值加 1；若 S <= 0，表示有某些进程正在等待该资源，因此要唤醒一个等待状态的进程，使之运行下去。 
 
 　　如果信号量的取值只能为 0 或者 1，那么就成为了互斥量（Mutex），0 表示临界区已经加锁，1 表示临界区解锁。
 
-##### 管程
+#### 2.4.4.管程
 
 　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不容易出错，也使得客户端代码调用更容易。
 
@@ -241,7 +239,7 @@
 
 　　管程引入了条件变量以及相关的操作：wait() 和 signal() 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。signal() 操作用于唤醒被阻塞的进程。
 
-#### 进程通信
+### 2.5.进程通信
 
 　　进程通信是一种手段，而进程同步是一种目的。也就是说，为了能够达到进程同步的目的，需要让进程进行通信，传输一些进程同步所需要的信息。
 
@@ -267,7 +265,7 @@
 
 　　进程间通信的手段有：管道、FIFO（命名管道）、消息队列、信号量、共享存储、套接字。
 
-##### 管道
+#### 2.5.1.管道
 
 　　管道是通过调用 pipe 函数创建的，fd[0] 用于读，fd[1] 用于写。
 
@@ -276,13 +274,13 @@
 * 只支持半双工通信（单向交替传输）；
 * 只能在父子进程或者兄弟进程中使用。
 
-##### FIFO
+#### 2.5.2.FIFO
 
 　　也称为命名管道，去除了管道只能在父子进程中使用的限制。
 
 　　FIFO 常用于客户-服务器应用程序中，FIFO 用作汇聚点，在客户进程和服务器进程之间传递数据。
 
-##### 消息队列
+#### 2.5.3.消息队列
 
 　　相比于 FIFO，消息队列具有以下有点：
 
@@ -290,11 +288,11 @@
 2. 避免了 FIFO 的同步阻塞问题，不需要进程自己提供同步方法；
 3. 读进程可以根据消息类型有选择地接收消息，而不像 FIFO 那样只能默认地接收。
 
-##### 信号量
+#### 2.5.4.信号量
 
 　　它是一个计数器，用于为多个进程提供对共享数据对象的访问。
 
-##### 共享存储
+#### 2.5.5.共享存储
 
 　　允许多个进程共享一个给定的存储区。因为数据不需要再进程之间复制，所以这是最快的一种 IPC。
 
@@ -302,11 +300,11 @@
 
 　　多个进程可以将同一个文件映射到它们的地址空间从而实现共享内存。另外 XSI 共享内存不是使用文件，而是使用内存的匿名段。
 
-##### 套接字
+#### 2.5.6.套接字
 
 　　与其他通信机制不同的是，它可用于不用机器间的进程通信。
 
-#### 池
+### 2.6.池
 
 　　所谓池的概念，一般是指应用提前向内核批量申请资源，用于接下来的使用和回收，减少资源的初始化和销毁次数等开销，以达到提高系统性能的目标。
 
@@ -321,9 +319,9 @@
 
 　　线程池：主要应用于任务小而多，处理时间短的场景，比如简单网页请求等。
 
-### 死锁
+## 3.死锁
 
-#### 死锁概念
+### 3.1.死锁概念
 
 　　两个以上的进程互相要求双方释放已经占用的资源导致无法继续运行下去的现象。
 
@@ -331,13 +329,13 @@
 
 　　例如：一个系统有一台扫描仪 R1，一台刻录机 R2，有两个进程 P1、P2，他们都准备将扫描的文档刻录到 CD 上，P1 先请求 R1 成功，P2 先请求 R2 并成功，后来，P1 又请求 R2，但却因为已经分配而阻塞，P2 请求 R1，也因分配而阻塞，此时，双方都被阻塞，都希望双方释放自己所需的资源，但又谁都不能得到自己所需的资源而继续进程，从而一直占用自己所占的资源，就形成死锁。
 
-#### 可抢占性资源和不可抢占性资源
+### 3.2.可抢占性资源和不可抢占性资源
 
 　　可抢占性资源：某进程获得这类资源后，该资源可以在被其他进程或系统抢占。
 
 　　不可抢占性资源：一旦系统将资源分配给一个进程以后，就不能把它强行收回，只能等它用完自行释放。
 
-#### 产生死锁的原因
+### 3.3.产生死锁的原因
 
 1. 竞争不可抢占性资源。
 2. 进程运行推进的顺序不合适。
@@ -345,29 +343,29 @@
 
 　　如果系统资源充足，进程的资源请求都能够得到满足，死锁出现的可能性就很低，否则就会因抢夺优先的资源而陷入死锁。其次，进程运行推进顺序与速度不同，也可能产生死锁。
 
-#### 产生死锁的四个必要条件
+### 3.4.产生死锁的四个必要条件
 
 　　产生死锁的四个必要条件：互斥条件、请求与保持条件、不可剥夺条件、循环等待条件。
 
-##### 互斥条件
+#### 3.4.1.互斥条件
 
 　　一个资源一次只能被一个进程使用。
 
 　　每个资源要么已经分配给了一个进程，要么就是可用的。
 
-##### 请求与保持条件
+#### 3.4.2.请求与保持条件
 
 　　一个进程因请求资源而阻塞时，对已获得的资源保持不放。
 
 　　已经得到了某个资源的进程可以再请求新的资源。
 
-##### 不可剥夺条件
+#### 3.4.3.不可剥夺条件
 
 　　进程已获取的资源，在未使用完之前，不能强行剥夺。
 
 　　已经分配给一个进程的资源不能强制性地被抢占，它只能被占用它的进程显式地释放。
 
-##### 循环等待条件
+#### 3.4.4.循环等待条件
 
 　　若干进程之间形成一种头尾相连的循环等待资源关系。
 
@@ -375,7 +373,7 @@
 
 　　这四个条件是死锁的必要条件，只要系统发生死锁，这些条件必然成立，而只要上述条件之一不满足，就不会发生死锁。
 
-#### 处理方法
+### 3.5.死锁的处理方法
 
 　　解决死锁的 4 种处理策略：鸵鸟策略（即不理睬策略）、预防策略、避免策略、检测与解除策略。
 
