--- a/Kotlin/动脑学院kotlin学习笔记/动脑学习笔记37-59.md
+++ b/Kotlin/动脑学院kotlin学习笔记/动脑学习笔记37-59.md
@@ -42,7 +42,7 @@ fun main() {
 
 ## 38. 安全调用操作符
 
-* 加了安全调用操作符，kotlin就不会报错了，编译器看到有安全调用操作符，所以它知道如何检查 null 值。如果遇到 null 值，它就跳过函数调用，而不是返回 null。
+* 加了安全调用操作符，kotlin 就不会报错了，编译器看到有安全调用操作符，所以它知道如何检查 null 值。如果遇到 null 值，它就跳过函数调用，而不是返回 null。
 
 ```kotlin
 fun main() {
@@ -193,7 +193,7 @@ UnskilledException: 操作不当
 | require        | 如果参数为 false，则抛出 IllegalArgumentException 异常       |
 | requireNotNull | 如果参数为null，则抛出IllegalStateException异常，否则返回非null值 |
 | error          | 如果参数为null，则抛出IllegalStateException异常并输出错误信息，否则返回非null值 |
-| assert         | 如果参数为 false，则抛出 AssertError异常，并打伤断言编译器标记 |
+| assert         | 如果参数为 false，则抛出 AssertError异常，并打上断言编译器标记 |
 
 ```kotlin
 fun main() {
@@ -366,7 +366,7 @@ fun main() {
 
 ### Double 类型格式化
 
-* 格式化字符串时一串特殊字符，它决定改如何格式化数据
+* 格式化字符串是一串特殊字符，它决定改如何格式化数据
 
 ```kotlin
 import kotlin.math.roundToInt
@@ -523,8 +523,6 @@ fun main() {
     println(fileContents) // 打印的字符串的集合
 }
 ```
-
-
 
 ## 57. takeIf
 
