--- a/Android/架构与设计模式/插件化/插件化.md
+++ b/Android/架构与设计模式/插件化/插件化.md
@@ -352,7 +352,7 @@ class TestActivity extends PluginActivity {}
 资源的注入并不容易，好在 Android 系统给我们留了一条后路，最重要的是这两个接口：
 
 * PackageManager#getPackageArchiveInfo：根据 Apk 路径解析一个未安装的 Apk 的 PackageInfo
-* PackageManager#getResourcesForApplication：根据 ApplicationInfo 创建一个 Resiurces 实例
+* PackageManager#getResourcesForApplication：根据 ApplicationInfo 创建一个 Resources 实例
 
 我们要做的就是在上面 ContainerActivity#onCreate 中加载插件 Apk 的时候，用这两个方法创建出来一份插件资源实例。具体来说就是先用 PackageManager#getPackageArchiveInfo 拿到插件 Apk 的 PackageInfo，有了 PackageInfo 之后我们就可以自己组装一份 ApplicationInfo，然后通过 PackageManager#getResourcesFroApplication 来创建资源实例，大概代码像这样：
 
