--- a/Android/架构与设计模式/架构思想的基础.md
+++ b/Android/架构与设计模式/架构思想的基础.md
@@ -4,11 +4,11 @@
 
 　　依赖倒转原则告诉我们要依赖于抽象，不依赖于具体，要单向的依赖，这样每一层都是感知不到他的调用者的。划分层次好处就在于这里，每一层可以独立的扩展，层与层之间至于几个暴露的接口，并且依赖的方向是单向的。
 
-![img](https:////upload-images.jianshu.io/upload_images/5077517-57e7283a1f02ce29.png?imageMogr2/auto-orient/strip|imageView2/2/w/1152/format/webp)
+![img](https:////upload-images.jianshu.io/upload_images/5077517-57e7283a1f02ce29.png)
 
 　　如果某一层的模块特别多，接口比较复杂的话，可以结合外观模式，加一层简化调用的接口。
 
-![img](https:////upload-images.jianshu.io/upload_images/5077517-2bc38ab928fe6f6d.png?imageMogr2/auto-orient/strip|imageView2/2/w/1152/format/webp)
+![img](https:////upload-images.jianshu.io/upload_images/5077517-2bc38ab928fe6f6d.png)
 
 
 　　常见的层次划分比如后端的 mvc，比如前端的 mvc、mvvm。具体点就是 controller、service、dao 与组件、service、store 等。
@@ -17,23 +17,19 @@
 
 　　层次划分后每一层内部之间应该是模块化的，每个模块封装了自己的功能，然后对外暴露了供外界调用的接口。
 
-![img](https:////upload-images.jianshu.io/upload_images/5077517-47b8589cfd1ad136.png?imageMogr2/auto-orient/strip|imageView2/2/w/1152/format/webp)
+![img](https:////upload-images.jianshu.io/upload_images/5077517-47b8589cfd1ad136.png)
 
 　　模块划分的依据就是职责边界是否明确、逻辑是否独立，划分模块后的代码是更容易维护的，不需要深入细节，只需要和某一个模块耦合就可以了。
 
 　　模块之间的调用是各种方向的，可能很复杂，必要的时候可以加入一个中介者来简化调用。模块之间不做任何耦合，只与中介者耦合，所有的模块之间的耦合都在中介者里统一维护，当模块之间的调用关系复杂的时候，加入一个中介者会使得逻辑更清晰，代码更易维护。
 
-![img](https:////upload-images.jianshu.io/upload_images/5077517-500234d0e5be7729.png?imageMogr2/auto-orient/strip|imageView2/2/w/1152/format/webp)
+![img](https:////upload-images.jianshu.io/upload_images/5077517-500234d0e5be7729.png)
 
 # 插件化
 
 　　我们使用的框架或者库，都是封装了通用的基础的逻辑骨架，把不变的部分封装起来，把变化的部分通过各种方式暴露出去：子类、参数、mixin、配置等等。这是一种控制反转的思路。把主控制流程封装在内部，需要扩展的点让开发者去扩展。这就是一种插件化的思路，插件就是插到程序所暴露出的扩展点上的。设计模式中模板方法模式就是这种思路。
 
-
-
-![img](https:////upload-images.jianshu.io/upload_images/5077517-09e7c75a30cf3faf.png?imageMogr2/auto-orient/strip|imageView2/2/w/1152/format/webp)
-
-
+![img](https:////upload-images.jianshu.io/upload_images/5077517-09e7c75a30cf3faf.png)
 
 　　这种架构思路明显代码组织很松散，容易扩展和维护，开发中非常常见。
 
