--- a/plan/面试/海信聚好看一面.md
+++ b/plan/面试/海信聚好看一面.md
@@ -97,7 +97,7 @@ Map:mode-view-present，mode 负责数据，view是xml 和 activity 负责，pre
 
 通过内存映射，将服务端的用户内存与系统内存进行了映射，减少了一次数据拷贝，就只剩下客户端将数据从用户内存拷贝到系统内存。
 
-## 8. 匿名内部类静态变量和普通变量的区别
+## 8. 匿名内部类，静态变量和普通变量的区别
 
 
 
@@ -107,11 +107,139 @@ Map:mode-view-present，mode 负责数据，view是xml 和 activity 负责，pre
 
 ## 10.虚拟机的内存结构
 
+方法区、虚拟机栈、本地方法栈、堆、程序计数器
+
+程序计数器是一块较小的区域，可以看作是当前线程正在执行的字节码的行号指示器。
+
+虚拟机栈：生命周期与线程相同，虚拟机栈描述的是 java 方法执行的线程内存模型：每个方法执行的时候都会同步创建一个栈帧用于存储局部变量表、操作数栈、动态连接，方法出口等信息。每个方法被调用直至执行完毕的过程，都对应着一个栈桢在虚拟机栈中从入栈到出栈的过程。
+
+局部变量表中存方了编译器可知的各种 java 虚拟机的基本数据类型、对象引用和 returnAddress 类型。
+
+本地方法栈与虚拟机栈的作用是相同，只不过存储的是虚拟机使用的本地方法服务。
+
+Java 堆：所有线程共享的一块内存区域，此内存区域的唯一目的就是存放对象实体，所有的对象实例都在这里分配内存。
+
+方法区与 java 堆一样都是各个线程共享的内存区域，用于存储已被虚拟机加载的类型信息、常量、静态变量、即时编译器编译后的代码缓存等数据。
+
+运行时常量池是方法区的一部分，存放编译器生成的各种字面量和符号引用。
+
 ## 11.静态变量在内部类和普通变量的区别
 
 
 
 ## 12.匿名内部类可以在方法里定义吗？
+
+可以。
+
+```java
+abstract  class animals{
+    abstract void eat();
+}
+class People extends animals{
+
+    @Override
+    void eat() {
+        System.out.println("吃面条");
+    }
+}
+
+class Demo{
+    public static void main(String[] args) {
+        animals animals = new People();
+        animals.eat();
+    }
+}
+
+
+
+class Demo1{
+    public static void main(String[] args) {
+        animals animals = new animals(){
+            @Override
+            void  eat(){
+                System.out.println("吃面条");
+            }
+        };
+        animals.eat();
+    }
+}
+```
+
+因为如果抽象类或接口的实现类我们只实现一次，那么重新写一个实现类会比较麻烦，用来简化代码，所以引出了匿名内部类。匿名内部类必须重写接口或者抽象类中的全部抽象方法，可以调用抽象类中的静态常量或者抽象类中非private修饰的变量。
+
+```java
+abstract class animals{
+  int age = 6;
+  private int tall;
+    abstract void eat();
+    abstract void sleep();
+}
+
+
+
+class Demo1{
+
+    public static void main(String[] args) {
+       animals animal = new animals() {
+           @Override
+           public void eat() {
+               System.out.println("吃面条");
+           }
+
+           @Override
+           public void sleep() {
+               System.out.println("年龄为"+age);
+               System.out.println("上床睡觉");
+           }
+           public void print(){
+               System.out.println(age);
+           }
+
+       };
+        animal.eat();
+        animal.sleep();
+//        ((animals) animal).print();  该条语句无法被执行，因为抽象类中不含该方法
+       
+    }
+}
+```
+
+1、匿名内部类不能定义任何静态成员、方法。
+
+2、匿名内部类中的方法不能是抽象的；
+
+3、匿名内部类必须实现接口或抽象父类的所有抽象方法。
+
+4、匿名内部类不能定义构造器；
+
+5、匿名内部类访问的外部类成员变量或成员方法必须用static修饰；
+
+6、内部类可以访问外部类私有变量和方法。(这是JDK8的新增特性，允许在局部内部类、匿名内部类中访问非final修饰的局部变量，而在JDK8之前，局部变量前必须加final修饰符，否则程序编译时报错。)
+
+1、匿名内部类因为没有类名，可知**匿名内部类不能定义构造器**。
+
+2、因为在创建匿名内部类的时候，会立即创建它的实例，可知**匿名内部类不能是抽象类，必须实现接口或抽象父类的所有抽象方法**。
+
+3、匿名内部类会继承一个父类（有且只有一个）或实现一个接口（有且只有一个），实现父类或接口中所有抽象方法，可以改写父类中的方法，添加自定义方法。
+
+5、当匿名内部类和外部类有同名变量（方法）时，默认访问的是匿名内部类的变量（方法），要访问外部类的变量（方法）则需要加上外部类的类名。
+
+6、从Outer.class反编译代码中可看出自动生成了两个静态方法：access0()和𝑎𝑐𝑐𝑒𝑠𝑠0()和access1()，并在测试3和测试4中通过Outer类名直接调用，这样实现了内部类对外部类私有成员变量和方法的访问。可知**内部类可以访问外部类私有变量和方法**。
+
+先说一下什么时候使用匿名内部类，即使用前提和条件：必须存在继承和实现关系的时候才可以使用，其实这也很好理解，首先，匿名内部类没有名字，那该如何描述以及new个对象呢？对，没错，要通过继承它的父类或者实现一个接口来达成这一目的。
+
+```java
+// 注意，show 要为 final
+public void test(final boolean show){
+        Button button = new Button(this);
+        button.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+             if(show)  {} else {} 
+            }
+        });
+    }
+```
 
 ## 13. view的绘制流程
 
@@ -123,8 +251,6 @@ view 的绘制流程分为三部：测量、布局、绘制，在 viewroot 的 p
 
 diapatchTouchEvent：分发事件
 
-o nTouchEvent：处理事件
+onTouchEvent：处理事件
 
 onInterseptTouchEvent：拦截事件
-
-onTouchEvent 方法中
