--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -115,12 +115,15 @@
    * 安装知识整理 100%
    * MVI
    * LiveDataBus
-   * LiveDataBus
    * MutableLiveData 详解
    * MVVM 设计模式与 ViewModel、LiveData
    * 内存知识
    * ListView 原理解析
    * Android中ListView的几种常见优化方式
+   * AIDL
+   * 面试宝典
+   
+7. 202209 - 面试整理
 
 ## 2. 生活
 
@@ -140,7 +143,8 @@
 * 202205 - 10 次
 * 202206 - 9 次
 * 202207 - 7 次
-* 202208 - 
+* 202208 - 10 次
+* 202209 - 5 次
 
 ### 2.2. 绘画
 
@@ -158,7 +162,9 @@
 * 202205 - 3 张，进度 12.5%
 * 202206 - 4 张，进度 29%
 * 202207 - 2 张，进度 37%
-* 202208 - 
+* 202208 - 9 张，共 18 张，进度 75%
+* 202209 - 43 张，共 61 张，完成
+* 
 
 
 
