update 10 and 11 plan implementation

--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -7,6 +7,7 @@
 ```
 * 视频
   * 码牛-移动互联网高级开发正式课视频-音视频
+  * Jetpack 动脑学院视频 https://www.bilibili.com/video/BV1Ry4y1t7Tj/?spm_id_from=333.999.0.0&vd_source=cd375d3428e3e8f7707053e56d4a5a58
 * 书籍
   * 《Android 进阶之光》
 ```
@@ -14,12 +15,12 @@
 #### 实施
 
 * 202205-《Android 进阶之光》第二章
+* 202210 - Jetpack 动脑学院视频学习
 
 ### 1.2. Kotlin
 
 ```
 * 视频
-
   * https://www.bilibili.com/video/BV1wf4y1s7TG?p=12&spm_id_from=pageDriver  动脑学院-kotiln - 完成
 
 * 书籍
@@ -125,6 +126,8 @@
    
 7. 202209 - 面试整理
 
+7. 202211 - snackbars 常见问题
+
 ## 2. 生活
 
 ### 2.1. 锻炼
@@ -146,7 +149,7 @@
 * 202208 - 10 次
 * 202209 - 5 次
 * 202210 - 0 次
-* 202211 - 3 次
+* 202211 - 4 次
 
 ### 2.2. 绘画
 
@@ -168,6 +171,11 @@
 * 202209 - 43 张，共 61 张，完成
 * 202210 - 0 张
 * 202211 - 7 张，共 68 张
+
+### 2.3. 尤克里里
+
+* 202211 - 尤克里里乐理知识学习
+* 
 
 
 
