--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -7,7 +7,7 @@
 ```
 * 视频
   * 码牛-移动互联网高级开发正式课视频-音视频
-  * Jetpack 动脑学院视频 https://www.bilibili.com/video/BV1Ry4y1t7Tj/?spm_id_from=333.999.0.0&vd_source=cd375d3428e3e8f7707053e56d4a5a58
+  * Jetpack 动脑学院视频 https://www.bilibili.com/video/BV1Ry4y1t7Tj/?spm_id_from=333.999.0.0&vd_source=cd375d3428e3e8f7707053e56d4a5a58 - 完成
 * 书籍
   * 《Android 进阶之光》
 ```
