--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -126,7 +126,9 @@
    
 7. 202209 - 面试整理
 
-7. 202211 - snackbars 常见问题
+8. 202211 - snackbars 常见问题
+
+9. 202212 - navigation 基础
 
 ## 2. 生活
 
@@ -150,6 +152,7 @@
 * 202209 - 5 次
 * 202210 - 0 次
 * 202211 - 4 次
+* 202212 - 2 次
 
 ### 2.2. 绘画
 
@@ -171,11 +174,12 @@
 * 202209 - 43 张，共 61 张，完成
 * 202210 - 0 张
 * 202211 - 7 张，共 68 张
+* 202212 - 13 张，共 81 张
 
 ### 2.3. 尤克里里
 
 * 202211 - 尤克里里乐理知识学习
-* 
+* 202212 - 10 次练习
 
 
 
