2023计划1月实施情况更新

--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -85,7 +85,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* 
+* 202301 - 8 次
 
 ### 2.2. 绘画
 
@@ -96,7 +96,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* 
+* 202301 - 7 张
 
 ### 2.3. 尤克里里
 
@@ -106,7 +106,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* 
+* 202301 - 1 次
 
 
 
@@ -116,3 +116,5 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 *《微习惯》
 ```
 
+* 202301 - 电影《满江红》
+* 202301 - 电视剧《孤独又璀璨的神 - 鬼怪》
