修改错别字

--- a/BookNote/设计模式之禅/第2章-里氏替换原则.md
+++ b/BookNote/设计模式之禅/第2章-里氏替换原则.md
@@ -38,7 +38,7 @@
 
 3. 覆盖或实现父类的方法时输入参数可以被放大
 
-　　里氏替换原则要求指定一个契约，就是制定好双方的开发协议，然后再各自实现，也就是父类或接口，这种设计放啊也叫做 Design by Contract （契约设计）。契约制定了，也就同时制定了前置条件和后置条件，前置条件就是你要我执行，就必须满足我的条件；后置条件就是我执行完了需要反馈，标准是什么。
+　　里氏替换原则要求指定一个契约，就是制定好双方的开发协议，然后再各自实现，也就是父类或接口，这种设计方法也叫做 Design by Contract （契约设计）。契约制定了，也就同时制定了前置条件和后置条件，前置条件就是你要我执行，就必须满足我的条件；后置条件就是我执行完了需要反馈，标准是什么。
 
 　　方法中的输入参数成为前置条件。
 
