--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -44,7 +44,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* 
+* 202303 - navigation 之 deeplink
 
 ### 1.4. Compose
 
@@ -86,6 +86,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 #### 实施
 
 * 202301 - 8 次
+* 202302 - 7 次
 
 ### 2.2. 绘画
 
@@ -97,6 +98,8 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 #### 实施
 
 * 202301 - 7 张
+* 202302 - 9 张
+* 
 
 ### 2.3. 尤克里里
 
@@ -107,6 +110,8 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 #### 实施
 
 * 202301 - 1 次
+* 202302 - 0 次
+* 
 
 
 
@@ -118,3 +123,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 * 202301 - 电影《满江红》
 * 202301 - 电视剧《孤独又璀璨的神 - 鬼怪》
+* 202302 - 书籍 《恶意》
+* 202302 - 书籍 《第七天》
+* 202302 - 电视剧 《狂飙》
+* 202303 - 电影 《保你平安》
