--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -87,6 +87,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 * 202301 - 8 次
 * 202302 - 7 次
+* 202303 - 4 次
 
 ### 2.2. 绘画
 
@@ -99,7 +100,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 * 202301 - 7 张
 * 202302 - 9 张
-* 
+* 202303 - 19 张
 
 ### 2.3. 尤克里里
 
@@ -111,7 +112,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 * 202301 - 1 次
 * 202302 - 0 次
-* 
+* 202303 - 0 次
 
 
 
@@ -121,9 +122,14 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 *《微习惯》
 ```
 
-* 202301 - 电影《满江红》
-* 202301 - 电视剧《孤独又璀璨的神 - 鬼怪》
-* 202302 - 书籍 《恶意》
-* 202302 - 书籍 《第七天》
-* 202302 - 电视剧 《狂飙》
-* 202303 - 电影 《保你平安》
+* 电视剧
+  * 202301 -《孤独又璀璨的神 - 鬼怪》
+  * 202302 -《狂飙》
+  * 202303 - 《悬崖上的金鱼姬》
+* 电影
+  * 202301 -《满江红》
+  * 202303 -《保你平安》
+* 书籍
+  * 202302 -《恶意》
+  * 202302 -《第七天》
+  * 202303 - 《红楼小婢》
