--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -19,7 +19,7 @@
 * 书籍
   * 《深入理解 Kotlin 协程》
 * 视频
-	* 动脑学院视频
+	* 动脑学院协程视频
 https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=cd375d3428e3e8f7707053e56d4a5a58
 * 知识
 	* by lazy
@@ -28,7 +28,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* 
+* kotlin 之 String - trim()
 
 ### 1.3. Jetpack
 
@@ -70,11 +70,9 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 ### 1.6. 知识积累
 
-```
+#### 实施
 
-```
-
-
+* webview 遇到的 exception
 
 ## 2. 生活
 
@@ -115,6 +113,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202301 - 1 次
 * 202302 - 0 次
 * 202303 - 0 次
+* 202304 - 0 次
 
 
 
