--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -88,6 +88,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202301 - 8 次
 * 202302 - 7 次
 * 202303 - 4 次
+* 202304 - 2 次
 
 ### 2.2. 绘画
 
@@ -101,6 +102,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202301 - 7 张
 * 202302 - 9 张
 * 202303 - 19 张
+* 202304 - 27 张
 
 ### 2.3. 尤克里里
 
@@ -134,3 +136,4 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
   * 202302 -《恶意》
   * 202302 -《第七天》
   * 202303 - 《红楼小婢》
+  * 202305 - 《长安的荔枝》
