--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -28,7 +28,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* kotlin 之 String - trim()
+* 202304 - kotlin 之 String - trim()
 
 ### 1.3. Jetpack
 
@@ -72,7 +72,8 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* webview 遇到的 exception
+* 202304 - webview 遇到的 exception
+* 202305 - EditText 的 imeOptions 与多行输入的问题
 
 ## 2. 生活
 
@@ -89,6 +90,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202302 - 7 次
 * 202303 - 4 次
 * 202304 - 2 次
+* 202305 - 1 次
 
 ### 2.2. 绘画
 
@@ -103,6 +105,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202302 - 9 张
 * 202303 - 19 张
 * 202304 - 27 张
+* 202305 - 30 张
 
 ### 2.3. 尤克里里
 
@@ -116,6 +119,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202302 - 0 次
 * 202303 - 0 次
 * 202304 - 0 次
+* 202305 - 0 次
 
 
 
@@ -128,12 +132,14 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 电视剧
   * 202301 -《孤独又璀璨的神 - 鬼怪》
   * 202302 -《狂飙》
-  * 202303 - 《悬崖上的金鱼姬》
 * 电影
   * 202301 -《满江红》
   * 202303 -《保你平安》
+  * 202303 - 《悬崖上的金鱼姬》
+  * 202306 -《醉拳2》
+  * 202306 -《冰川时代5:星际碰撞》
 * 书籍
   * 202302 -《恶意》
   * 202302 -《第七天》
-  * 202303 - 《红楼小婢》
-  * 202305 - 《长安的荔枝》
+  * 202303 -《红楼小婢》
+  * 202305 -《长安的荔枝》
