--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -45,6 +45,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 #### 实施
 
 * 202303 - navigation 之 deeplink
+* 202307 - Preferences DataStore 全解析
 
 ### 1.4. Compose
 
@@ -92,6 +93,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202304 - 2 次
 * 202305 - 1 次
 * 202306 - 1 次
+* 202306 - 5 次
 
 ### 2.2. 绘画
 
@@ -108,6 +110,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202304 - 27 张
 * 202305 - 30 张
 * 202306 - 24 张
+* 202306 - 46 张
 
 ### 2.3. 尤克里里
 
@@ -123,6 +126,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202304 - 0 次
 * 202305 - 0 次
 * 202306 - 0 次
+* 202307 - 0 次
 
 
 
