--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -29,6 +29,8 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 #### 实施
 
 * 202304 - kotlin 之 String - trim()
+* 202308 - 破解 kotlin 协程
+* 202308 - 利用 kotlin 特点
 
 ### 1.3. Jetpack
 
@@ -38,7 +40,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * navigation
 * room
 * databinding
-* lifecycle
+* lifecycle - done
 * paging
 ```
 
@@ -46,6 +48,11 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 * 202303 - navigation 之 deeplink
 * 202307 - Preferences DataStore 全解析
+* 202308 - Proto DataStore
+* 202308 - 《Jetpack 架构组件从入门到精通》第一章 什么是 Jetpack
+* 202308 - 《Jetpack 架构组件从入门到精通》第二章 Android Jetpack - Navigation
+* 202308 - 《Android Jetpack 应用指南》第一章 初识 Jetpack
+* 202308 - 《Android Jetpack 应用指南》第二章 LifeCycle
 
 ### 1.4. Compose
 
@@ -93,7 +100,9 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202304 - 2 次
 * 202305 - 1 次
 * 202306 - 1 次
-* 202306 - 5 次
+* 202306 - 1 次
+* 202307 - 5 次
+* 202308 - 2 次
 
 ### 2.2. 绘画
 
@@ -111,6 +120,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202305 - 30 张
 * 202306 - 24 张
 * 202306 - 46 张
+* 202307 - 29 张
 
 ### 2.3. 尤克里里
 
@@ -127,13 +137,14 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202305 - 0 次
 * 202306 - 0 次
 * 202307 - 0 次
+* 202308 - 0 次
 
 
 
 # 3. 影视与书籍
 
 ```
-*《微习惯》
+*《微习惯》- 完成
 ```
 
 * 电视剧
@@ -152,3 +163,4 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
   * 202303 -《红楼小婢》
   * 202305 -《长安的荔枝》
   * 202306 - 《Procreate 收回插画入门教程：我的iPad能画出全世界》
+  * 202308 - 《微习惯》
