--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -35,10 +35,10 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 ### 1.3. Jetpack
 
 ```
-* LiveData
+* LiveData - done
 * Hilt
 * navigation
-* room
+* room - done
 * databinding
 * lifecycle - done
 * paging
@@ -53,6 +53,10 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202308 - 《Jetpack 架构组件从入门到精通》第二章 Android Jetpack - Navigation
 * 202308 - 《Android Jetpack 应用指南》第一章 初识 Jetpack
 * 202308 - 《Android Jetpack 应用指南》第二章 LifeCycle
+* 202308 - 《Android Jetpack 应用指南》第三章 Navigation
+* 202308 - 《Android Jetpack 应用指南》第四章 ViewModel
+* 202308 - 《Android Jetpack 应用指南》第五章 LiveData
+* 202308 - 《Android Jetpack 应用指南》第六章 Room
 
 ### 1.4. Compose
 
@@ -103,6 +107,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202306 - 1 次
 * 202307 - 5 次
 * 202308 - 2 次
+* 202309 - 0 次
 
 ### 2.2. 绘画
 
@@ -113,14 +118,15 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 #### 实施
 
-* 202301 - 7 张
-* 202302 - 9 张
-* 202303 - 19 张
-* 202304 - 27 张
-* 202305 - 30 张
-* 202306 - 24 张
-* 202306 - 46 张
-* 202307 - 29 张
+* 202301 - 7 张（护肤品记录 - 4 张，手帐 - 3 张）
+* 202302 - 9 张（procreate - 8 张，手帐 - 1 张）
+* 202303 - 21 张（水彩 - 15 张，procreate - 3 张，护肤品记录 - 1 张，格骨头 - 2 张）
+* 202304 - 27 张（格骨头 - 25 张，护肤品记录 - 2 张）
+* 202305 - 30 张（格骨头 - 30 张）
+* 202306 - 24 张（水彩 - 15 张，格骨头 - 3 张，护肤品记录 - 4 张，procreate - 2 张）
+* 202307 - 46 张（水彩 - 44 张，护肤品记录 - 2 张）
+* 202308 - 29 张（水彩 - 21 张，速写 - 8 张）
+* 202309 - 32 张（水彩 - 31 张，procreate - 1张）
 
 ### 2.3. 尤克里里
 
@@ -138,6 +144,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202306 - 0 次
 * 202307 - 0 次
 * 202308 - 0 次
+* 202309 - 0 次
 
 
 
@@ -164,3 +171,4 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
   * 202305 -《长安的荔枝》
   * 202306 - 《Procreate 收回插画入门教程：我的iPad能画出全世界》
   * 202308 - 《微习惯》
+  * 202309 - 《水彩绘：暖系淡彩入门课》
