--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -53,10 +53,11 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202308 - 《Jetpack 架构组件从入门到精通》第二章 Android Jetpack - Navigation
 * 202308 - 《Android Jetpack 应用指南》第一章 初识 Jetpack
 * 202308 - 《Android Jetpack 应用指南》第二章 LifeCycle
-* 202308 - 《Android Jetpack 应用指南》第三章 Navigation
-* 202308 - 《Android Jetpack 应用指南》第四章 ViewModel
-* 202308 - 《Android Jetpack 应用指南》第五章 LiveData
-* 202308 - 《Android Jetpack 应用指南》第六章 Room
+* 202309 - 《Android Jetpack 应用指南》第三章 Navigation
+* 202309 - 《Android Jetpack 应用指南》第四章 ViewModel
+* 202309 - 《Android Jetpack 应用指南》第五章 LiveData
+* 202309 - 《Android Jetpack 应用指南》第六章 Room
+* 202310 -《Android Jetpack 应用指南》第七章 WorkManager
 
 ### 1.4. Compose
 
@@ -68,6 +69,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 #### 实施
 
 * 202304 - TextField 设置光标位置
+* 202310 - Compose 加载图片异常
 
 ### 1.5. 教师证
 
@@ -108,6 +110,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202307 - 5 次
 * 202308 - 2 次
 * 202309 - 0 次
+* 202310 - 1 次
 
 ### 2.2. 绘画
 
@@ -127,6 +130,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202307 - 46 张（水彩 - 44 张，护肤品记录 - 2 张）
 * 202308 - 29 张（水彩 - 21 张，速写 - 8 张）
 * 202309 - 32 张（水彩 - 31 张，procreate - 1张）
+* 202310 - 59 张（水彩 - 36 张，procreate - 21 张，速写 - 2 张）
 
 ### 2.3. 尤克里里
 
@@ -145,6 +149,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202307 - 0 次
 * 202308 - 0 次
 * 202309 - 0 次
+* 202310 - 0 次
 
 
 
@@ -164,11 +169,12 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
   * 202306 -《醉拳2》
   * 202306 -《冰川时代5:星际碰撞》
   * 202306 - 《晴雅集》
+  * 202310 - 《封神第一部：朝歌风云》
 * 书籍
   * 202302 -《恶意》
   * 202302 -《第七天》
   * 202303 -《红楼小婢》
   * 202305 -《长安的荔枝》
-  * 202306 - 《Procreate 收回插画入门教程：我的iPad能画出全世界》
+  * 202306 - 《Procreate 手绘插画入门教程：我的iPad能画出全世界》
   * 202308 - 《微习惯》
   * 202309 - 《水彩绘：暖系淡彩入门课》
