--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -58,6 +58,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202309 - 《Android Jetpack 应用指南》第五章 LiveData
 * 202309 - 《Android Jetpack 应用指南》第六章 Room
 * 202310 -《Android Jetpack 应用指南》第七章 WorkManager
+* 202311 - 《Android Jetpack 应用指南》第八章 DataBinding
 
 ### 1.4. Compose
 
@@ -111,6 +112,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202308 - 2 次
 * 202309 - 0 次
 * 202310 - 1 次
+* 202311 - 3 次
 
 ### 2.2. 绘画
 
@@ -131,6 +133,7 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202308 - 29 张（水彩 - 21 张，速写 - 8 张）
 * 202309 - 32 张（水彩 - 31 张，procreate - 1张）
 * 202310 - 59 张（水彩 - 36 张，procreate - 21 张，速写 - 2 张）
+* 202311 - 32 张（水彩 - 25 张，procreate - 7 张）
 
 ### 2.3. 尤克里里
 
