update 2023 总结与 2024 计划

--- a/plan/计划/2023年计划.md
+++ b/plan/计划/2023年计划.md
@@ -11,7 +11,7 @@
 
 #### 实施
 
-* 
+* 未完成
 
 ### 1.2. Kotlin
 
@@ -107,12 +107,12 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202304 - 2 次
 * 202305 - 1 次
 * 202306 - 1 次
-* 202306 - 1 次
 * 202307 - 5 次
 * 202308 - 2 次
 * 202309 - 0 次
 * 202310 - 1 次
 * 202311 - 3 次
+* 202312 - 0 次
 
 ### 2.2. 绘画
 
@@ -125,15 +125,16 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 
 * 202301 - 7 张（护肤品记录 - 4 张，手帐 - 3 张）
 * 202302 - 9 张（procreate - 8 张，手帐 - 1 张）
-* 202303 - 21 张（水彩 - 15 张，procreate - 3 张，护肤品记录 - 1 张，格骨头 - 2 张）
-* 202304 - 27 张（格骨头 - 25 张，护肤品记录 - 2 张）
-* 202305 - 30 张（格骨头 - 30 张）
-* 202306 - 24 张（水彩 - 15 张，格骨头 - 3 张，护肤品记录 - 4 张，procreate - 2 张）
+* 202303 - 21 张（水彩 - 15 张，procreate - 3 张，护肤品记录 - 1 张，格骨头procreate - 2 张）
+* 202304 - 27 张（格骨头procreate - 25 张，护肤品记录 - 2 张）
+* 202305 - 30 张（格骨头procreate - 30 张）
+* 202306 - 24 张（水彩 - 15 张，格骨头procreate - 3 张，护肤品记录 - 4 张，procreate - 2 张）
 * 202307 - 46 张（水彩 - 44 张，护肤品记录 - 2 张）
 * 202308 - 29 张（水彩 - 21 张，速写 - 8 张）
 * 202309 - 32 张（水彩 - 31 张，procreate - 1张）
 * 202310 - 59 张（水彩 - 36 张，procreate - 21 张，速写 - 2 张）
 * 202311 - 32 张（水彩 - 25 张，procreate - 7 张）
+* 202312 - 36 张（水彩 - 34 张，procreate - 2 张）
 
 ### 2.3. 尤克里里
 
@@ -153,6 +154,8 @@ https://www.bilibili.com/video/BV1uo4y1y7ZF/?spm_id_from=333.999.0.0&vd_source=c
 * 202308 - 0 次
 * 202309 - 0 次
 * 202310 - 0 次
+* 202311 - 0 次
+* 202312 - 0 次
 
 
 
