--- a/plan/计划/2024年计划.md
+++ b/plan/计划/2024年计划.md
@@ -16,12 +16,12 @@
 
 ```
 * Hilt
-* 书籍：《Android Jetpack 应用指南》第九-十章
+* 书籍：《Android Jetpack 应用指南》第九、十章 - 完成
 ```
 
 #### 实施
 
-* 
+* 202401 - 《Android Jetpack 应用指南》第九 - 十章
 
 ### 1.3. Compose
 
