--- a/plan/计划/2024年计划.md
+++ b/plan/计划/2024年计划.md
@@ -26,12 +26,12 @@
 ### 1.3. Compose
 
 ```
-* Jetpack compose 基础知识（官方文档）
+* Jetpack compose 基础知识（官方文档）- 完成
 ```
 
 #### 实施
 
-* 
+* Jetpack compose 基础知识 - 202402
 
 ### 1.4. 教师证
 
@@ -47,7 +47,7 @@
 
 #### 实施
 
-* 
+* getDimensionxxx方法区别 - 202402
 
 ## 2. 生活
 
@@ -73,7 +73,7 @@
 #### 实施
 
 * 202401 - 23 张 - 水彩 23 张
-* 
+* 202402 - 
 
 ### 2.3. 影视与书籍
 
@@ -83,5 +83,5 @@
 
 #### 实施
 
-
+* 
 
